# trinity

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: main.yml  push-docker.yml
c-hello-world-module/: .gitignore  README.md  main.c  trinity_module.c  trinity_module.h
java-module/: Log.java  LogImpl.java  Sys.java  SysImpl.java  TrinityModule.java  TrinityModuleImpl.java  TrinityModuleWorld.java  pom.xml
modules/: Cargo.toml  Makefile  README.md  build-tail.sh  build.sh  check.sh  convert-to-component.sh  install-cargo-component.sh  install-tools.sh  regenerate.sh  watch.sh
modules/.cargo/: config.toml
modules/chatgpt/: Cargo.toml
modules/chatgpt/src/: lib.rs
modules/horsejs/: Cargo.toml
modules/horsejs/src/: lib.rs
modules/libcommand/: Cargo.toml
modules/libcommand/src/: lib.rs  trinity_module.rs
modules/linkify/: Cargo.toml
modules/linkify/src/: lib.rs
modules/mastodon/: Cargo.toml
modules/mastodon/src/: lib.rs
modules/memos/: Cargo.toml
modules/memos/src/: lib.rs
modules/openai/: Cargo.toml
modules/openai/src/: lib.rs
modules/pun/: Cargo.toml
modules/pun/src/: lib.rs
modules/secret/: Cargo.toml
modules/secret/src/: lib.rs
modules/silverbullet/: Cargo.toml
modules/silverbullet/src/: lib.rs
modules/uuid/: Cargo.toml
modules/uuid/src/: lib.rs
modules/wit-kv/: Cargo.toml
modules/wit-kv/src/: kv_world.rs  lib.rs
modules/wit-log/: Cargo.toml
modules/wit-log/src/: lib.rs  log_world.rs
modules/wit-sync-request/: Cargo.toml
modules/wit-sync-request/src/: lib.rs  sync_request_world.rs
modules/wit-sys/: Cargo.toml
modules/wit-sys/src/: lib.rs  sys_world.rs
src/: admin_table.rs  lib.rs  main.rs  room_resolver.rs  util.rs  wasm.rs
src/wasm/apis/: kv_store.rs  log.rs  mod.rs  sync_request.rs  sys.rs
wit/: exports.wit  imports.wit  kv.wit  log.wit  sync-request.wit  sys.wit  trinity-module.wit
