[package]
name = "trinity"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
dotenvy = "0.15.5"
futures = "0.3.24"
matrix-sdk = "0.6.0"
notify = "5.0.0"
rand = "0.8.5"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "aed92eb" }
