[package]
name = "trinity"
version = "0.1.0"
edition = "2021"

[lib]
name = "trinity"
path = "src/lib.rs"

[[bin]]
name = "trinity"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.66"
dotenvy = "0.15.6"
futures = "0.3.25"
matrix-sdk = "0.6.2"
notify = "5.0.0"
rand = "0.8.5"
redb = "0.9.0"
reqwest = { version = "0.11.12", features = ["json", "blocking"] }
signal-hook = "0.3.15"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
toml = "0.5.10"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
wasmtime = { version = "32.0.0", features = ["component-model"] }
directories = "5.0.1"
