[workspace]
members = [
    # Modules
    "./horsejs",
    "./linkify",
    "./pun",
    "./uuid",
    "./secret",
    "./mastodon",
    "./openai",

    # Libs
    "./wit-log",
    "./wit-sync-request",
    "./wit-sys",
    "./wit-kv",
]

[workspace.dependencies]
wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wit-log = { path = "./wit-log" }
wit-sys = { path = "./wit-sys" }
wit-sync-request = { path = "./wit-sync-request" }
wit-kv = { path = "./wit-kv" }
