[workspace]
members = [
    # Modules
    "./horsejs",
    "./linkify",
    "./pun",
    "./uuid",
    "./secret",
    "./mastodon",
    "./openai",

    # Libs
    "./libcommand",
    "./wit-log",
    "./wit-sync-request",
    "./wit-sys",
    "./wit-kv",
]

[workspace.dependencies]
cargo-component-bindings = "0.4.0"
libcommand = { path = "./libcommand" }
wit-bindgen = "0.13.0"
wit-log = { path = "./wit-log" }
wit-sys = { path = "./wit-sys" }
wit-sync-request = { path = "./wit-sync-request" }
wit-kv = { path = "./wit-kv" }
