[workspace]
members = [
    # Modules
    "./horsejs",
    "./linkify",
    "./pun",
    "./uuid",
    "./secret",
    "./mastodon",
    "./memos",
    "./openai",

    # Libs
    "./libcommand",
    "./wit-kv",
    "./wit-log",
    "./wit-sync-request",
    "./wit-sys",
]

[workspace.dependencies]
wit-bindgen = "0.41.0"
wit-bindgen-rt = "0.41.0"

libcommand = { path = "./libcommand" }
wit-kv = { path = "./wit-kv" }
wit-log = { path = "./wit-log" }
wit-sync-request = { path = "./wit-sync-request" }
wit-sys = { path = "./wit-sys" }
