[package]
name = "linkify"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
regex = "1"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
shlex = "1.1.0"
textwrap-macros = "0.3.0"

libcommand.workspace = true
wit-kv.workspace = true
wit-log.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target.path = "../../wit/trinity-module.wit"
