[package]
name = "pun"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
wit-bindgen-guest-rust.workspace = true

wit-log.workspace = true
wit-sync-request.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
direct-export = "interface"

[package.metadata.component.imports]
log = "../../wit/log.wit"
sync-request = "../../wit/sync-request.wit"

[package.metadata.component.exports]
interface = "../../wit/exports.wit"
