[package]
name = "pun"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"

libcommand.workspace = true
wit-log.workspace = true
wit-sync-request.workspace = true

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
target.path = "../../wit/trinity-module.wit"
