[package]
name = "secret"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-kv = { workspace = true }
wit-log = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
direct-export = "interface"

[package.metadata.component.exports]
interface = "../../wit/trinity-module.wit"

[package.metadata.component.imports]
kv = "../../wit/kv.wit"
log = "../../wit/log.wit"
