[package]
name = "uuid"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = "1.1.2"
wit-bindgen-guest-rust = { workspace = true }
wit-sys = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
direct-export = "interface"

[package.metadata.component.imports]
imports = "../../wit/imports.wit"

[package.metadata.component.exports]
interface = "../../wit/exports.wit"
